# bedtime-ai

./: .gitignore  BEDTIME_APP_DESIGN.md  CHAT_HANDOFF_NOTES.md  CONFIG_STEP_4_1_README.md  CONFIG_STEP_4_2_README.md  CONFIG_STEP_4_3_README.md  WINDOWS_STEP_3_1_README.md  WINDOWS_STEP_3_2_README.md  pyproject.toml
.tmp-settings/: config.toml
scripts/: __init__.py  build_windows_exe.py  run_schedule_change.py
src/bedtime_guard/: __init__.py  config_files.py  events.py  platforms.py  policy.py  schedule.py  set_schedule.py  snooze.py  state.py
src/bedtime_guard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bedtime_guard/ui/: __init__.py  guard_screen.py  macos_overlay_spike.py  windows_overlay_spike.py
tests/: test_config_files.py  test_guard_screen.py  test_macos_overlay_spike.py  test_platforms.py  test_policy_state_events.py  test_run_schedule_change.py  test_schedule.py  test_set_schedule.py  test_windows_overlay_spike.py  test_windows_packaging.py
