[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bedtime-guard"
version = "0.1.0"
description = "Bedtime guard scheduler prototype"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.9,<6.10",
]

[project.optional-dependencies]
windows-build = [
    "pyinstaller>=6,<7",
]

[project.scripts]
bedtime-guard-prototype = "bedtime_guard.ui.guard_screen:main"
bedtime-guard-windows-overlay-spike = "bedtime_guard.ui.windows_overlay_spike:main"
